added more variables and for loops to validate user input and check for repeated user input.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 	<title>Hangman Game</title>
 </head>
 <body>
-	<div id="display"></div>
-
-
+	<div id="show"></div>
+	<p id="remaining-guesses"> </p>
+	<p id="wins"> </p>
+	<p id="losses"> </p>
+	<div id="wrong-guesses"></div>
 
 
 
